First version with 3(+1) pages

--- a/projects.html
+++ b/projects.html
@@ -14,9 +14,9 @@
  <body>
     <header class="header">
         <nav class="navbar">
-            <a class="navbar_home navbar_chosen" href="index.html">Markus Viljanen</a>
+            <a class="navbar_home" href="index.html">Markus Viljanen</a>
             <a class="navbar_link" href="research.html">Research</a>
-            <a class="navbar_link" href="projects.html">Projects</a>
+            <a class="navbar_link navbar_chosen" href="projects.html">Projects</a>
             <a class="navbar_link" href="blog.html">Blog</a>
             <a class="navbar_img" href="https://linkedin.com">
                 <svg class="svg-icon" width="2.5rem" height="2.5rem" aria-hidden="true" role="img" focusable="false" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -27,22 +27,15 @@
         </nav>
     
     </header>
+
     <main>
 
-    <div class="container">
-        <figure class="profile_img">
-            <img src="img/profile.jpg" alt="Profile picture"/>
-        </figure>
-
-        <div class="quote">
-            <p>
-                Hi, I'm Markus, a researcher and consultant in data science. I like anything to do with models and data, but above all real world problems which combine mathematics and machine learning in some way. An obsessive need to understand any system from first principles has resulted in cool ideas and applications, which I share in these pages.
-            </p>
+        <div class="art">
+            <p>TODO</p>
         </div>
-    </div>
 
     </main>
 
- </body>
+</body>
 </html>
 
