--- a/research.html
+++ b/research.html
@@ -33,8 +33,8 @@
         <section id="project_joint" class="project">
             <h1 class="project_title">A joint model for the estimation of species distributions and environmental characteristics from point-referenced data </h1>
             <figure>
-                <img class="project_img" src="img/bayes.png" alt=""/>
-                <figcaption class="project_caption"> Figure: Graphical representation of the nested hierarchical Bayesian model. </figcaption>
+                <img class="project_img" src="img/models.png" alt=""/>
+                <figcaption class="project_caption"> Figure: DAG representation of the two-stage model (left) and the joint hierarchical model (right). </figcaption>
             </figure>
             <p>
                 Predicting and explaining species occurrence using environmental characteristics is essential for nature conservation and management, especially for rare species that are under threat from climate change, acidification and eutrophication. Species distribution models consider species occurrence as the dependent variable and environmental conditions as the independent variables. Suitable conditions are estimated based on a sample of species observations, where one assumes that the underlying environmental conditions are known. This is not always the case, which requires a two-stage approach, predicting the missing environmental factors before a species distribution model is fitted. However, treating the predicted independent variables as accurate surveys of the environmental conditions at a specific point does not take into account prediction uncertainty or consider that the species occurrence may inform us about the environmental variables. To address both issues, we present a joint hierarchical Bayesian model where models for the environmental variables, rather than a set of predicted values, are input to the species distribution model. All models are fitted together based only on point-referenced observations, which results in a correct propagation of uncertainty. This produces maps for all variables and abiotic associations that differ from the standard two-stage approach. 
@@ -70,7 +70,7 @@
             </ul>
             <h2 class="project_subtitle">Related papers</h2>
           <ol class="project_references">
-              <li>Viljanen, M., Minnema, J., N.H. Wassenaar, P., Rorije, E., &amp; Peijnenburg, W. (2023). What is the Ecotoxicity of a Given Chemical for a Given Aquatic Species? Predicting Interactions between Species and Chemicals using Recommender System Techniques. SAR and QSAR in Environmental Research. <i>to appear</i>.</li>
+              <li>Viljanen, M., Minnema, J., N.H. Wassenaar, P., Rorije, E., &amp; Peijnenburg, W. (2023). What is the Ecotoxicity of a Given Chemical for a Given Aquatic Species? Predicting Interactions between Species and Chemicals using Recommender System Techniques. SAR and QSAR in Environmental Research. <a href="https://www.tandfonline.com/doi/full/10.1080/1062936X.2023.2254225">link</a></li>
               <li>Schlender, T., Viljanen, M., van Rijn, J. N., Mohr, F., Peijnenburg, W. J., Hoos, H. H., ... &amp; Wong, A. (2023). The Bigger Fish: A Comparison of Meta-Learning QSAR Models on Low-Resourced Aquatic Toxicity Regression Tasks. Environmental Science & Technology. <a href="https://pubs.acs.org/doi/full/10.1021/acs.est.3c00334">link</a></li>
           </ol>
         </section>
